# capstone

bag_to_pcd_program/: CMakeLists.txt  bag_to_pcd.cpp
cpp_full/: CMakeLists.txt  cpp_full.cpp  package.xml
cpp_get_bag_duration/: CMakeLists.txt  get_rosbag_duration.cpp  package.xml
matrix_transform_pointcloud/: matrix_transform.cpp
rospy_bag/: python_bag_api.py  python_bag_api_2.py
visualize/: CMakeLists.txt  openni_grabber.cpp
visualize2/: cloud_viewer.cpp
voxelgrid_filter/: voxel_grid.cpp
write_data_to_pcd/: pcd_write.cpp
write_pcd/: CMakeLists.txt  write_pcd.cpp
ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws/logs/cpp_full/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.020.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.050.log.stderr  build.make.053.log.stderr  build.make.055.log.stderr  build.make.057.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.065.log.stderr  build.make.066.log.stderr  (+7 more)
ws/src/cpp_full/: CMakeLists.txt  cpp_full.cpp
(+17 files in other folders)
